Disable multiline operation indentation rubocop
This allows chained method calls like

```
User.something
    .and_something
    .and_something_else
```

--- a/dot_rubocop.yml
+++ b/dot_rubocop.yml
@@ -24,4 +24,4 @@ Style/EmptyLinesAroundModuleBody:
   Enabled: false
 
 Style/MultilineOperationIndentation:
-  EnforcedStyle: indented
+  Enabled: false
