Fix rubocop config
And add new descriptions

--- a/dot_rubocop.yml
+++ b/dot_rubocop.yml
@@ -6,25 +6,35 @@ Rails:
   Enabled: true
 
 Style/Encoding:
+  Description: 'Check whether the source file has a utf-8 encoding comment.'
   EnforcedStyle: when_needed
 
-Documentation:
+Style/Documentation:
+  Description: 'Document classes and non-namespace modules.'
   Enabled: false
 
 Style/IndentHash:
-  EnforcedStyle: false
+  Description: 'Checks the indentation of the first key in a hash literal.'
+  Enabled: false
 
-StringLiterals:
+Style/StringLiterals:
+  Description: 'Checks if uses of quotes match the configured preference.'
   Enabled: false
 
 Style/EmptyLinesAroundClassBody:
+  Description: 'Keeps track of empty lines around class bodies.'
   Enabled: false
 
 Style/EmptyLinesAroundBlockBody:
+  Description: 'Keeps track of empty lines around block bodies.'
   Enabled: false
 
 Style/EmptyLinesAroundModuleBody:
+  Description: "Keeps track of empty lines around module bodies."
   Enabled: false
 
 Style/MultilineOperationIndentation:
+  Description: >-
+    Checks indentation of binary operations that span more than
+    one line.
   Enabled: false
